# scoreboard

./: CMakeLists.txt  README.md  windows.manifest
.github/workflows/: main.yml
cmake/: packaging.cmake
resources/: resources.qrc
resources/stylesheets/: stylesheet.qss
src/: CMakeLists.txt  about_dialog.cpp  about_dialog.h  about_dialog.ui  control_dialog.cpp  control_dialog.h  control_dialog.ui  main.cpp  scoreboard.cpp  scoreboard.h  scoreboard.ui  settings.cpp  settings.h  settings_dialog.cpp  settings_dialog.h  settings_dialog.ui  timer.cpp  timer.h  version.h
src/models/: scoreboardModel.cpp  scoreboardModel.h
